web_app_drawer/static/src/less/navbar.less
/* Copyright 2016 LasLabs Inc.
 * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */

.main-nav {
    margin-bottom: 0;
    min-height: @navbar-height;
}

.main-nav ul.nav > li > a {
    padding: @navbar-padding-vertical @navbar-padding-horizontal;
    height: @navbar-height;
}

.oe_topbar_avatar {
    margin-top: -@navbar-padding-horizontal;
    height: @navbar-height;
    border-radius: 50%;
}

.navbar-collapse, .navbar-toggle {
    padding-top: 2px;
    padding-bottom: 2px;
    margin-top: 0px;
    margin-bottom: 0px;
    height: @navbar-height;
}

.dropdown-scrollable {
    height: auto;
    overflow-x: hidden;
}

@media (max-width: @screen-sm - 1px) {
    #odooMenuBarNav[aria-expanded="false"] {
        /* Hack to hide the visibly expanded mobile menu on load. */
        position: absolute;
        z-index: -9999;
    }
}

